Fix deployment issues: improve error handling and add health check endpoint

--- a/render.yaml
+++ b/render.yaml
@@ -8,4 +8,8 @@ services:
       - key: NODE_ENV
         value: production
       - key: MONGODB_URI
-        sync: false 
+        sync: false
+      - key: JWT_SECRET
+        sync: false
+      - key: PORT
+        value: 10000 
